# figura-vault

./: .gitignore  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/prd/: 手办图片收藏馆.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/figures/: AlbumFormDialog.tsx  BeforeAfterSlider.tsx  EraserReveal.tsx  FigureCard.tsx  FigureComparePanel.tsx  FigureDetailDialog.tsx  FigureFormDialog.tsx  FigureGrid.tsx  ImportFigureDialog.tsx  TagInput.tsx
src/components/layout/: AppLayout.tsx  AppSidebar.tsx  TopBar.tsx
src/data/: mockFigures.ts
src/hooks/: use-image-src.ts
src/lib/: album.ts  db.ts  figure.ts  file.ts  ollama.ts  seed.ts  tag.ts  window-drag.ts
src/pages/: FigureDetailPage.tsx  GalleryPage.tsx  SettingsPage.tsx
src/types/: figure.ts
